# sgd-magnet-tuner

./: .gitignore  README.md  acd.mad  create_a34.mad  data.json  lhcb1.seq  meas_trk.tfs  pyproject.toml
.github/: coverage.yml
.github/workflows/: coverage.yml
data/: bend_errors.tfs  elem_names.txt  final_knobs.txt  knob_strengths_table.md  matched_tunes.txt  start_table.md  true_strengths.txt
docs/: Makefile  api_reference.rst  conf.py  getting_started.rst  index.rst  modules.rst
docs/_autosummary/: aba_optimiser.config.rst  aba_optimiser.dataframes.rst  aba_optimiser.dataframes.utils.rst  aba_optimiser.filtering.rst  aba_optimiser.filtering.svd.rst  aba_optimiser.io.rst  aba_optimiser.io.utils.rst  aba_optimiser.mad.base_mad_interface.rst  aba_optimiser.mad.optimising_mad_interface.rst  aba_optimiser.mad.rst  aba_optimiser.mad.scripts.rst  aba_optimiser.mad.tracking_interface.rst  aba_optimiser.matching.matcher.rst  aba_optimiser.matching.matcher_config.rst  aba_optimiser.matching.rst  aba_optimiser.measurements.knob_extraction.rst  aba_optimiser.measurements.rst  aba_optimiser.measurements.twiss_from_measurement.rst  aba_optimiser.measurements.utils.rst  aba_optimiser.model_creator.config.rst  aba_optimiser.model_creator.create_models.rst  aba_optimiser.model_creator.madng_utils.rst  aba_optimiser.model_creator.madx_utils.rst  aba_optimiser.model_creator.rst  aba_optimiser.model_creator.tfs_utils.rst  aba_optimiser.momentum_recon.core.rst  aba_optimiser.momentum_recon.dispersive.rst  aba_optimiser.momentum_recon.dispersive_measurement.rst  aba_optimiser.momentum_recon.momenta.rst  aba_optimiser.momentum_recon.neighbors.rst  aba_optimiser.momentum_recon.rst  aba_optimiser.momentum_recon.transverse.rst  aba_optimiser.optimisers.adam.rst  aba_optimiser.optimisers.amsgrad.rst  aba_optimiser.optimisers.lbfgs.rst  aba_optimiser.optimisers.rst  aba_optimiser.physics.bpm_phases.rst  aba_optimiser.physics.deltap.rst  aba_optimiser.physics.dpp_calculation.rst  aba_optimiser.physics.lhc_bends.rst  (+39 more)
docs/_static/: custom.css
examples/: estimate_dispersions.py
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_040907afa7cc9f12___init___py.html  z_040907afa7cc9f12_base_mad_interface_py.html  z_040907afa7cc9f12_dispatch_py.html  z_040907afa7cc9f12_lhc_optimising_interface_py.html  z_040907afa7cc9f12_optimising_mad_interface_py.html  z_040907afa7cc9f12_scripts_py.html  z_27025578538cf607___init___py.html  z_2a47f131e376c5c7___init___py.html  z_2a47f131e376c5c7_utils_py.html  z_2e3cc037538eceb1___init___py.html  z_2e3cc037538eceb1_data_processing_py.html  z_2e3cc037538eceb1_magnet_perturbations_py.html  z_2e3cc037538eceb1_optics_py.html  z_3a51ef0141775c78___init___py.html  z_3a51ef0141775c78_config_py.html  z_3a51ef0141775c78_create_models_py.html  z_3a51ef0141775c78_madng_utils_py.html  z_3a51ef0141775c78_madx_utils_py.html  z_3a51ef0141775c78_tfs_utils_py.html  z_3e355bb958461484___init___py.html  z_3e355bb958461484_deltap_py.html  z_3e355bb958461484_lhc_bends_py.html  z_7a335e60713ea72d___init___py.html  z_7a335e60713ea72d_controller_py.html  z_7d577fe0cf9e03d6_dispersion_estimation_py.html  z_86759e3d5228c5ee___init___py.html  z_86759e3d5228c5ee_create_datafile_b2_py.html  z_86759e3d5228c5ee_create_datafile_loop_py.html  z_86759e3d5228c5ee_create_datafile_py.html  z_86759e3d5228c5ee_knob_extraction_py.html  z_86759e3d5228c5ee_optimise_closed_orbit_py.html  z_86759e3d5228c5ee_optimise_squeeze_quads_py.html  z_86759e3d5228c5ee_plot_quad_diffs_and_phases_py.html  z_86759e3d5228c5ee_squeeze_helpers_py.html  z_86759e3d5228c5ee_squeeze_measurements_py.html  z_86759e3d5228c5ee_utils_py.html  (+35 more)
mad_scripts/: acc-models-lhc  acd.mad  acd_check.mad  create_a34.mad  job.create_model_nominal.madx  job.create_model_nominal_b1.madx  job.create_model_nominal_b2.madx  lhcb1.seq  link_accmodels.sh
scripts/: calculate_pz.py  check_arc_optimisation.py  compare_results.py  convert_tfs.py  create_a34.py  create_model_12cm.py  create_model_b2_12cm.py  create_noisy_tfs.py  estimate_dpp_from_correctors.py  kalman.py  omc_analysis.py  optimise_closed_orbit_simulation.py  optimise_energy.py  plot_dpp_results.py  plot_effect_noises.py  plot_effect_noises_clean.py  plot_effect_noises_original.py  plot_functions.py  plot_optics.py  plot_phase_space.py  plot_pz_data.py  plot_real_data.py  plot_results.py  plot_saved_results.py  plot_single_bpm_svd_effect.py  plot_uncertainties.py  run_dpp_scan.py  run_kalman_filter.py  run_omc_analysis.py  run_optimiser.py  worker_uncertainty.py
src/aba_optimiser/: __init__.py  adam.py  amsgrad.py  arc_by_arc_worker.py  base_worker.py  calculate_pz.py  config.py  controller.py  ellipse_filtering.py  filtering.py  kalman.py  kalman_filtering.py  kalman_numba.py  mad_interface.py  make_noisy_track_data.py  optimiser.py  phase_space.py  plotting.py  ring_worker.py  scheduler.py  stochastic_lbfgs_tr.py  utils.py  (+1 more)
tests/: README.md  __init__.py  conftest.py  create_models.py  test_bpm_phases.py
(+223 files in other folders)
