[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "aba_optimiser"
version = "0.1.0"
description = "Knob strength optimisation using PyMAD-NG"
authors = [
    { name="Your Name", email="you@example.com" },
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "numpy",
    "pandas",
    "tfs-pandas",
    "tensorboardX",
    "pymadng>=0.3.0",
    "matplotlib",
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov"
]
dev = [
    "black",
    "ruff"
]
docs = [
    "sphinx>=7.0",
    "sphinx-autodoc-typehints>=2.0",
    "myst-parser>=2.0",
    "furo>=2023.9.10",
]
tracking = [
    "xsuite",
    "omc3",
    "pyarrow",
    "psutil",
]
cern = [
    "nxcals",
]


[tool.setuptools]
packages = ["aba_optimiser"]
package-dir = {"" = "src"}

[tool.coverage.run]
source = ["src/aba_optimiser"]

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
